workshop-app-k8s/workshop.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-app
  labels:
    app: workshop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-app
  template:
    metadata:
      labels:
        app: workshop-app
    spec:
      serviceAccountName: image-puller
      containers:
      - name: workshop-app
        image: image-registry.openshift-image-registry.svc:5000/workshop-app/workshop-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 256Mi
