workshop-app-k8s/workshop.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-app
  labels:
    app: workshop-app
spec:
  selector:
    app: workshop-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
